# dbbro

./: .gitignore  CONTEXT.md  README.md  README.pre-arc42.md  pyproject.toml  skills-lock.json
dbbro/: cli.py
dbbro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
specs/: 1_schema_configuration-spec.md  1_schema_configuration.md  1_visible_breadcrumb-spec.md  1_visible_breadcrumb.md  2_navigation_key_help-spec.md  2_navigation_key_help.md  2_record_search-spec.md  2_record_search.md  3_entry_table_view-spec.md  3_entry_table_view.md  3_inline_multiple_entity_relations-spec.md  3_inline_multiple_entity_relations.md  4_browsing_history-spec.md  4_browsing_history.md  4_replace_relation_selection_list-spec.md  4_replace_relation_selection_list.md  5_error_reporting-spec.md  5_error_reporting.md  6_db_connection_configuration-spec.md  6_db_connection_configuration.md  7_terminal_rendering-spec.md  7_terminal_rendering.md  briefing.md  roadmap.md
tests/: conftest.py  stub_screen.py  test_cli_startup_ordering.py  test_ep1b_t1_render_breadcrumb_line.py  test_ep1b_t2_draw_breadcrumb_bar.py  test_ep1b_t3_render_frame_breadcrumb.py  test_ep1b_t4_breadcrumb_on_history_navigation.py  test_ep2_t1_render_help_line.py  test_ep2_t1_searchable_pairs.py  test_ep2_t2_draw_help_bar.py  test_ep2_t2_selection_dialog_navigation.py  test_ep2_t3_value_prompt.py  test_ep2_t3_view_help_keys.py  test_ep2_t4_history_can_navigate.py  test_ep2_t4_lookup.py  test_ep2_t5_render_frame_help_bar.py  test_ep2_t5_reopen_via_s.py  test_ep2_t6_match_list.py  test_ep3_t1_db_connection_layer.py  (+58 more)
(+38 files in other folders)
