[project]
name = "dbbro"
version = "0.1.0"
description = "Console database browser"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pymysql>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dbbro*"]
